@@ -34,7 +34,6 @@ import io.arlas.server.core.model.response.FieldType;
 import io.dropwizard.jersey.params.IntParam;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
-import org.elasticsearch.common.geo.GeoPoint;
 import org.joda.time.format.DateTimeFormat;
 import org.locationtech.jts.algorithm.Orientation;
 import org.locationtech.jts.geom.*;
@@ -55,7 +54,7 @@ import static io.arlas.server.core.services.FluidSearchService.*;
 import static io.arlas.server.core.utils.CheckParams.GEO_AGGREGATION_TYPE_ENUMS;
 
 public class ParamsParser {
-    private static ObjectMapper objectMapper = new ObjectMapper();
+    private static final ObjectMapper objectMapper = new ObjectMapper();
     private static final String AGG_INTERVAL_PARAM = "interval-";
     private static final String AGG_FORMAT_PARAM = "format-";
     private static final String AGG_COLLECT_FIELD_PARAM = "collect_field-";
@@ -153,7 +152,7 @@ public class ParamsParser {
     private static List<RawGeometry> getAggregationRawGeometries(String rawGeometriesString, CollectionReference collectionReference) throws ArlasException {
         List<RawGeometry> rawGeometries = new ArrayList<>();
         if (!StringUtil.isNullOrEmpty(rawGeometriesString)) {
-            for(String rg: Arrays.asList(rawGeometriesString.split(";"))) {
+            for(String rg: rawGeometriesString.split(";")) {
                 Matcher sortMatcher = SORT_FIELDS_PATTERN.matcher(rg);
                 RawGeometry rawGeometry = new RawGeometry();
                 if (sortMatcher.find()) {
@@ -224,8 +223,7 @@ public class ParamsParser {
         if (!StringUtil.isNullOrEmpty(intervalString)) {
             String[] sizeAndUnit = intervalString.split("(?<=[a-zA-Z])(?=\\d)|(?<=\\d)(?=[a-zA-Z])");
             if (sizeAndUnit.length == 2) {
-                Interval interval = new Interval(tryParseInteger(sizeAndUnit[0]), UnitEnum.valueOf(sizeAndUnit[1].toLowerCase()));
-                return interval;
+                return new Interval(tryParseInteger(sizeAndUnit[0]), UnitEnum.valueOf(sizeAndUnit[1].toLowerCase()));
             } else throw new InvalidParameterException("The date interval '" + intervalString + "' is not valid");
         } else {
             return null;
@@ -243,7 +241,7 @@ public class ParamsParser {
     public static String getFieldFromFieldAliases(String fieldAlias, CollectionReference collectionReference) throws ArlasException {
         boolean isAlias = fieldAlias.startsWith(RANGE_ALIASES_CHARACTER);
         if (isAlias) {
-            String alias = fieldAlias.substring(1, fieldAlias.length());
+            String alias = fieldAlias.substring(1);
             if (alias.equals(TIMESTAMP_ALIAS)) {
                 return collectionReference.params.timestampPath;
             } else {
@@ -256,17 +254,14 @@ public class ParamsParser {
 
     public static String getValidAggregationFormat(String aggFormat) {
         // TODO: check if format is in DateTimeFormat (joda)
-        if (aggFormat != null) {
-            return aggFormat;
-        } else {
-            return "yyyy-MM-dd-HH:mm:ss";
-        }
+        return Objects.requireNonNullElse(aggFormat, "yyyy-MM-dd-HH:mm:ss");
     }
 
     public static Filter getFilter(CollectionReference collectionReference, String serializedFilter) throws InvalidParameterException {
         if (serializedFilter != null) {
             try {
-                Map<String, Filter> pf = objectMapper.readValue(serializedFilter, new TypeReference<Map<String, Filter>>() {});
+                Map<String, Filter> pf = objectMapper.readValue(serializedFilter, new TypeReference<>() {
+                });
                 Filter f = pf.get(collectionReference.collectionName);
                 if (f.righthand == null) {
                     f.righthand = Boolean.TRUE;
@@ -279,7 +274,7 @@ public class ParamsParser {
                         f.righthand = Boolean.TRUE;
                     }
                     return f;
-                } catch (JsonProcessingException ex) {
+                } catch (JsonProcessingException ignored) {
                 }
                 throw new InvalidParameterException(INVALID_FILTER + ": '" + serializedFilter + "'");
             }
@@ -305,7 +300,6 @@ public class ParamsParser {
      * @param tileBbox bounding box of the tile. Used in tiled geosearch
      * @param pwithinBbox a `point-within-bbox` expression
      * @return Filter objet
-     * @throws ArlasException
      */
     public static Filter getFilter(CollectionReference collectionReference,
                                    List<String> filters, List<String> q, String dateFormat, Boolean righthand,
@@ -491,7 +485,7 @@ public class ParamsParser {
         Geometry geom;
         try {
             geom = wkt.read(wktString);
-            List<Coordinate> filteredCoord = Arrays.stream(geom.getCoordinates()).filter(coordinate -> affectedBounds.contains(coordinate)).collect(Collectors.toList());
+            List<Coordinate> filteredCoord = Arrays.stream(geom.getCoordinates()).filter(affectedBounds::contains).toList();
             if(filteredCoord.size() != geom.getCoordinates().length){
                 throw new InvalidParameterException("Coordinates must be contained in the Envelope -360, 360, -180, 180");
             }
@@ -580,11 +574,6 @@ public class ParamsParser {
         return page;
     }
 
-    public static GeoPoint getGeoSortParams(String geoSort) throws ArlasException {
-        Pair<Double, Double> latLon = getGeoSortParamsAsLatLon(geoSort);
-        return new GeoPoint(latLon.getLeft(), latLon.getRight());
-    }
-
     // returns Pair(lat, lon)
     public static Pair<Double, Double> getGeoSortParamsAsLatLon(String geoSort) throws ArlasException {
         List<String> geoSortList = Arrays.asList(geoSort.split(":"));
@@ -622,9 +611,6 @@ public class ParamsParser {
 
     /**
      * This method enriches the `includes` attribute of the given `projection` parameter with fields given in `returned_geometries`
-     * @param projection
-     * @param returned_geometries
-     * @return
      */
     public static Projection enrichIncludes(Projection projection, String returned_geometries) {
         if (returned_geometries != null) {
